<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/judul_utama"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/subjudul_utama"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Laporan Perundungan -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cvPerundungan"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/kategori_perundungan"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_perundungan" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_overlay"
                    android:backgroundTint="@color/perundungan" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="1dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:text="@string/kartu_perundungan"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center|end"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/bg_circle_radius"
                        android:contentDescription="@string/buka"
                        android:padding="10dp"
                        android:src="@drawable/ic_arrow"
                        app:tint="@color/black" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Laporan Fasilitas Rusak -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cvFasilitas"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/kategori_fasilitas"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_fasilitas" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_overlay"
                    android:backgroundTint="@color/fasilitas" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="1dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:text="@string/kartu_fasilitas"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center|end"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/bg_circle_radius"
                        android:contentDescription="@string/buka"
                        android:padding="10dp"
                        android:src="@drawable/ic_arrow"
                        app:tint="@color/black" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Laporan Pelanggaran Tata Tertib -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cvPelanggaran"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/kategori_pelanggaran"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_pelanggaran" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_overlay"
                    android:backgroundTint="@color/pelanggaran" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="1dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:text="@string/kartu_pelanggaran"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center|end"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/bg_circle_radius"
                        android:contentDescription="@string/buka"
                        android:padding="10dp"
                        android:src="@drawable/ic_arrow"
                        app:tint="@color/black" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Laporan Keamanan & Keselamatan -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cvKeamanan"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/kategori_keamanan"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_keamanan" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_overlay"
                    android:backgroundTint="@color/keamanan" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="1dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:text="@string/kartu_keamanan"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center|end"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/bg_circle_radius"
                        android:contentDescription="@string/buka"
                        android:padding="10dp"
                        android:src="@drawable/ic_arrow"
                        app:tint="@color/black" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Riwayat Laporan -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cvHistory"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/riwayat"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:text="@string/kartu_riwayat"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center|end"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/bg_circle_radius"
                        android:contentDescription="@string/buka"
                        android:padding="10dp"
                        android:src="@drawable/ic_history"
                        app:tint="@color/white" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
